# rust-diesel-sqlite

./: Cargo.toml  README.md
migrations/2024-06-04-095007_create_posts/: up.sql
migrations/2024-06-04-103753_fixture_posts/: up.sql
src/: main.rs  schema.rs
src/posts/: get_posts.rs  mod.rs  model.rs
